--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ body {
 
 .container-fluid {
   position: absolute;
+  z-index: 3;
   top: 50px;
   left: 25px;
   pointer-events: none;
@@ -18,4 +19,42 @@ body {
   background-color: rgba(255,255,255,0.4);
   backdrop-filter: blur(10px);
   border-radius: 30px;
+}
+
+.notes-divider {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: stretch;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: stretch;
+
+  div {
+    font-size: 1.2rem;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 5px;
+    border: 1px solid rgba(255,255,255,0.4);
+    background: rgba(255,255,255,0);
+    flex-grow: 1;
+    flex-basis: 0;
+
+    &:hover {
+      background: rgba(255,255,255,0.4);
+      backdrop-filter: blur(10px);
+    }
+
+    p {
+      pointer-events: none;
+      user-select: none;
+    }
+  }
 }
